created user modal and auth integration

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT=9797
 JWT_SECRET_KEY=kh3l3gafr33fir3
 ORIGIN=http://localhost:5173
-DATABASE_URL="mongodb://localhost:27017/syncronus-chat-app"
+# DATABASE_URL="mongodb://localhost:27017/syncronus-chat-app"
+DATABASE_URL="mongodb://127.0.0.1:27017/syncronus-chat-app"
